--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
             </div>
             <div class="service-contents-chilled-1-string">
               <p class="service-contents-chilled-1-string1">教育事業</p>
-              <p>サンプルテキストがここに入ります。サンプルテキストがここに入ります。サンプルテキストがここに入ります。</p>
+              <p class="service-contents-chilled-1-string2">サンプルテキストがここに入ります。サンプルテキストがここに入ります。サンプルテキストがここに入ります。</p>
             </div>
           </div>
           <div class="service-contents-chilled-2">
@@ -104,7 +104,7 @@
             </div>
             <div class="service-contents-chilled-2-string">
               <p class="service-contents-chilled-2-string1">教育事業</p>
-              <p>サンプルテキストがここに入ります。サンプルテキストがここに入ります。サンプルテキストがここに入ります。</p>
+              <p class="service-contents-chilled-2-string2">サンプルテキストがここに入ります。サンプルテキストがここに入ります。サンプルテキストがここに入ります。</p>
             </div>
           </div>
           <div class="service-contents-chilled-3">
@@ -113,7 +113,7 @@
             </div>
             <div class="service-contents-chilled-3-string">
               <p class="service-contents-chilled-3-string1">教育事業</p>
-              <p>サンプルテキストがここに入ります。サンプルテキストがここに入ります。サンプルテキストがここに入ります。</p>
+              <p class="service-contents-chilled-3-string2">サンプルテキストがここに入ります。サンプルテキストがここに入ります。サンプルテキストがここに入ります。</p>
             </div>
           </div>
         </div>
@@ -133,10 +133,10 @@
             </div>
             <div class="blog-card-contents">
               <h2 class="blog-card-note">プログラミング学習の勉強方法を特集。挫折しない秘訣とは？</h2>
-              <div class="blog-cardtag">
-                <p class="blog-cardtag-date">2021/01/01</p>
-                <p class="blog-cardtag-name">#COACHTECH</p>
-              </div>
+            </div>
+            <div class="blog-cardtag">
+              <p class="blog-cardtag-date">2021/01/01</p>
+              <p class="blog-cardtag-name">#COACHTECH</p>
             </div>
           </div>
 
@@ -147,10 +147,10 @@
             </div>
             <div class="blog-card-contents">
               <h2 class="blog-card-note">プログラミング学習の勉強方法を特集。挫折しない秘訣とは？</h2>
-              <div class="blog-cardtag">
-                <p class="blog-cardtag-date">2021/01/01</p>
-                <p class="blog-cardtag-name">#COACHTECH</p>
-              </div>
+            </div>
+            <div class="blog-cardtag">
+              <p class="blog-cardtag-date">2021/01/01</p>
+              <p class="blog-cardtag-name">#COACHTECH</p>
             </div>
           </div>
           
@@ -161,10 +161,10 @@
             </div>
             <div class="blog-card-contents">
               <h2 class="blog-card-note">プログラミング学習の勉強方法を特集。挫折しない秘訣とは？</h2>
-              <div class="blog-cardtag">
-                <p class="blog-cardtag-date">2021/01/01</p>
-                <p class="blog-cardtag-name">#COACHTECH</p>
-              </div>
+            </div>
+            <div class="blog-cardtag">
+              <p class="blog-cardtag-date">2021/01/01</p>
+              <p class="blog-cardtag-name">#COACHTECH</p>
             </div>
           </div>
         </div>
